--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "gatsby": "^4.10.3",
+    "gatsby-plugin-sass": "^5.10.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "prettier": "^2.6.0"
   },
   "repository": {
